trying to fix the font issue when viewing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,9 @@ code {
 h1 {
   margin:0;
   color:#17293A;
-
 }
 
 p {
-  font-family:"Roboto";
+  font-family:"Helvetica Neue", sans-serif;
   text-align:center;
 }
